# folding-schemes

./: Cargo.toml
src/folding/nova/: circuits.rs
src/frontend/circom/: circuit.rs  file.rs  mod.rs  reader.rs
