[package]
name = "folding-schemes"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "0.4.2"
ark-ff = "^0.4.0"
ark-poly = "^0.4.0"
ark-std = "^0.4.0"
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = ["r1cs", "sponge"] }
ark-relations = { version = "^0.4.0", default-features = false }
ark-r1cs-std = { version = "^0.4.0", default-features = false }
thiserror = "1.0"
rayon = "1.7.0"
serde_json = "1.0.85"
nova-scotia = "0.5.0"
nova-snark = "0.23.0"
ff = { version = "0.13", features = ["derive"]}
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2.15"
serde = "1.0"
anyhow = "1.0.65"
bellperson = { version = "0.25", default-features = false }
byteorder = "1.4.3"
hex-literal = "0.3.4"
itertools = "0.9.0"
pasta_curves = "0.5"

# tmp imports for espresso's sumcheck
ark-serialize = "0.4.2"
espresso_subroutines = {git="https://github.com/EspressoSystems/hyperplonk", package="subroutines"}
espresso_transcript = {git="https://github.com/EspressoSystems/hyperplonk", package="transcript"}


[dev-dependencies]
ark-pallas = {version="0.4.0", features=["r1cs"]}
ark-vesta = {version="0.4.0"}
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = ["crh"] }

[features]
default = ["parallel", "nova", "hypernova"]
hypernova=[]
nova=[]

parallel = [ 
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-poly/parallel", 
    ]
